# PromptVault

./: .gitignore  HANDOFF-BOOT.md  HANDOFF.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: generate_icons.py
src/: App.tsx  promptIcons.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: db.rs  lib.rs  main.rs  sync.rs
src/api/: commands.ts
src/components/: BrainSelector.tsx  CommandPalette.tsx  ConflictDialog.tsx  DiffViewer.tsx  EditorPanel.tsx  ExportDialog.tsx  Inspector.tsx  NewPromptDialog.tsx  SetPasswordDialog.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  Sidebar.tsx  StatusBar.tsx  SyncPanel.tsx  UnlockDialog.tsx
src/editor/: MonacoEditor.tsx  darculaTheme.ts
src/embeddings/: service.ts  useEmbeddings.ts
src/hooks/: useAppData.ts
src/styles/: globals.css
