[package]
name = "promptvault"
version = "1.0.0"
edition = "2021"

[lib]
name = "promptvault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLCipher replaces plain SQLite; OpenSSL is vendored so no system dep is required.
# Existing plaintext DBs continue to work until the user opts in to encryption.
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# Argon2id key derivation: password -> 32-byte SQLCipher key
argon2 = "0.5"
# CSPRNG for salt generation (getrandom is already a transitive dep via uuid/v4)
getrandom = "0.2"
# sqlite-vec: compiled-in vector extension for SQLite.
# Extension init is deferred to Phase 6 when we add SQL similarity search.
# Raw f32 BLOB storage used now is wire-compatible with sqlite-vec's format.
sqlite-vec = "0"
